# book-service

./: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: b880d32d1e78_first_init.py
app/application/dto/book/: book.py
app/application/dto/chapter/: chapter.py
app/application/interfaces/: jwt_verifier.py  storage.py  task_broker.py
app/application/service/: epub_service.py
app/application/usecase/book/: create_book.py  delete_book.py  find_by_title_book.py  get_book.py  list_book.py  process_book.py  update_book.py  upload_book_epub.py
app/application/usecase/chapter/: add_chapter.py  delete_chapter.py  get_chapter_by_id.py  get_chapter_content.py  get_chapters_by_book_id.py
app/domain/entity/: book.py  chapter.py
app/domain/enum/: difficulty.py
app/domain/protocols/: book_protocol.py  chapter_protocol.py
app/domain/value_object/: book.py  chapter.py
app/infrastructure/: di.py
app/infrastructure/config/: __init__.py  config.py
app/infrastructure/database/: engine.py  session.py
app/infrastructure/mappers/: book_mapper.py  chapter_mapper.py
app/infrastructure/models/: book_model.py  chapter_model.py
app/infrastructure/repositories/: book_repositories.py  chapter_repositories.py
app/infrastructure/s3/: s3_storage.py
app/infrastructure/security/: jwt_verifier.py
app/infrastructure/taskiq/: broker.py  taskiq_adapter.py  tasks.py
app/presentation/api/: depends.py
tests/: conftest.py
tests/integration/: conftest.py  test_db_connection.py  test_repo_book.py  test_repo_chapter.py
(+18 files in other folders)
