[project]
name = "book-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Squilix01"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-env (>=1.1.5,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pytest-mock (>=3.15.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aioboto3 (>=15.1.0,<16.0.0)",
    "ebooklib (>=0.19,<0.20)",
    "taskiq (>=0.11.18,<0.12.0)",
    "taskiq-redis (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "taskiq-fastapi (>=0.3.5,<0.4.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
